Fix DateRangeInput placeholders overflow

--- a/src/client/components/DateRangeInput/DateRangeInput.less
+++ b/src/client/components/DateRangeInput/DateRangeInput.less
@@ -81,6 +81,7 @@
 
 .opuscapita_date-range-input__input-field[placeholder] {
   text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .opuscapita_date-range-input__input-field-container {
